tests/samples/negative/generics/missing_type_args.ax
module missing_type_args;

struct Box[T] {
    value: T;
}

fn main() -> i32 {
    let value: Box = Box[i32] { value: 1 };
    return 0;
}
